force-app/main/default/objects/Case/fields/Batch_Lot__c.field-meta.xml
<CustomField>
    <fullName>Batch_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Lot</label>
    <referenceTo>Batch_Lot__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>