force-app/main/default/objects/Case/fields/Product_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Product_Barcode__c</fullName>
    <label>Product Barcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>