force-app/main/default/objects/Case/fields/Safety_Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Safety_Risk_Type__c</fullName>
    <label>Safety Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy Reaction</fullName>
            </value>
            <value>
                <fullName>Packaging Issue</fullName>
            </value>
            <value>
                <fullName>Inefficacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>