force-app/main/default/objects/Case/listViews/Lab_team_Case.listView-meta.xml
<ListView>
    <fullName>Lab_team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Lab team</label>
    <queue>Lab_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>